--- a/pages/arasaka.html
+++ b/pages/arasaka.html
@@ -32,8 +32,212 @@
 				<!-- 
 				Początek podstrony: -->
 				<div class="subpage-container scrollable-content">
-					
+					<div class="ar-header">
+						<img src="../icons/arasaka.png" height="" width="100%" alt="Arasaka Logo" class="ar-logo">
+					</div>
+					<div class="ar-bookmark">
+						<div class="ar-bookmark-label">
+							<span>Wyposażenie</span>
+						</div>
+					</div>
+					<section class="ar-section">
+						<div class="ar-section-header">
+							<p>
+								Każdy Netrunner potrzebuje odrobinę wszczepów. Aby w ogóle użyć Cyberdecku trzeba sie do niego podłączyć za pomocą <b>złącza Interfejsu</b>, które wymaga posiadania <b>Neuralinku</b>. 
+							</p>
+							<p>
+								Cyberdecki to modułowe platformy, które są wyposarzone w Programy i Sprzęt potrzebny do nawigowania po sieci. Zarówno Programy, jak i Sprzęt zajmują miejsca w cyberdecku. <b></b> 
+							</p>
+							<p class="ar-section-subtitle">
+								Lepsze i gorsze Cyberdecki są rozróżniane poprzez ilość miejsc w nich dostępnych.
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Typ</th>
+										<th class="header-cell">Koszt</th>
+										<th class="header-cell">Miejsca</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Cyberdeck niskiej jakości</div>
+										</td>
+										<td class="secondary-cell">100 €$</td>
+										<td class="secondary-cell">5</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Cyberdeck zwykłej jakości</div>
+										</td>
+										<td class="secondary-cell">500 €$</td>
+										<td class="secondary-cell">7</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Cyberdeck wysokiej jakości</div>
+										</td>
+										<td class="secondary-cell">1000 €$</td>
+										<td class="secondary-cell">9</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="ar-section-header">
+							<p>
+								Poruszanie się po sieci było realizowane poprzez podłączanie swojego nerwu wzrokowego, jednak w ostatnich latach Netrunnerzy zaczęli używać <b>gogli VR</b>. Pozwoliły one pozostać w realnym świecie podczas nawigacji po sieci. Jeżeli Postać nie posiada takich gogli może podłączyć się do sieci w starym stylu. <b>Trzeba jednak pamietać, że w ten sposób Netrunner odcina się od realnego świata i jego stan przypomina bycie nieprzytomnym aż do wyjścia z sieci.</b> 
+							</p>
+						</div>
+					</section>
+					<div class="ar-bookmark">
+						<div class="ar-bookmark-label">
+							<span>Netrunning</span>
+						</div>
+					</div>
+					<section class="ar-section">
+						<div class="ar-section-header">
+							<p>
+								Netrunnerzy mogą wykonywać dwa typy Akcji: zwykłą i sieciową. Podczas swojej tury Netrunner wybiera, jaki rodzaj Akcji chce wykonać. <b>Aby wykonać Akcję sieciową Netrunner musi znajdować się nie dalej niż 6m od punktu dostępu. Liczba dostępnych Akcji sieciowych jest zależna od poziomu umiejętności specjalnej Interfejs. </b>Bez względu na wybrany typ Akcji, Netrunner nadal może się przemieszczać.
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Poziom Interfejsu</th>
+										<th class="header-cell">1-3</th>
+										<th class="header-cell">4-6</th>
+										<th class="header-cell">7-9</th>
+										<th class="header-cell">10</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Akcje sieciowe</div>
+										</td>
+										<td class="secondary-cell">2</td>
+										<td class="secondary-cell">3</td>
+										<td class="secondary-cell">4</td>
+										<td class="secondary-cell">5</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="ar-section-header">
+							<h2>Kategorie Akcji sieciowych</h2>
+							<p>
+								<b>> Podłącz/odłącz się z sieci</b> 
+							</p>
+							<p>
+								Postać może wejść i wyjść bezpiecznie z sieci pod warunkiem, że znajduje się nie dalej niż 6m od punktu dostępu. Jeżeli pomiędzy Postacią, a punktem dostępu znajduje się ściana, akcja zazwyczaj jest niemożliwa. Jeżeli Postać opuści sieć bez odłączenia się, dozna efektów ataku każdego spotkanego i nieuśpionego BLACK ICE. Odłączenie się z sieci resetuje ją do stanu sprzed podłączenia.
+							</p>
+							<p>
+								<b>> Użyj Interfejsu</b> 
+							</p>
+							<p>
+								Pozwala użyć jednej z funkcji Interfesju. Lista funkcji Interfejsu znajduje sie poniżej.
+							</p>
+							<p>
+								<b>> Aktywuj/deaktywuj Program</b> 
+							</p>
+							<p>
+								Postać aktywuje lub deaktywuje jeden z dostępnych Programów.
+							</p>
+							<p>
+								<b>> Inne</b> 
+							</p>
+							<p>
+								W tej kategorii przypisywane są rzeczy niewymienione nigdzie indziej, które nie pasują= do innych kategorii. 
+							</p>
+							<p>
+								<b>> Co nie jest Akcją sieciową?</b> 
+							</p>
+							<p>
+								Poruszanie się po sieci i ściąganie plików nie wymaga użycia Akcji sieciowej. Poruszanie się jest ograniczone przez różnorakie blokady i przeszkody takie jak: granica sieci, hasła itp.
+							</p>
+							<h2>Funkcje Interfejsu</h2>
+							<p>
+								Każdy Netrunner musi znać możliwości swojego sprzętu. Wiedza jak włączyć Program to nie wszystko.  
+							</p>
+						</div>
+						<div class="notes-box">
+							<p>
+								Rzut na użycie każdej z funkcji Interfejsu: <b>Poziom Interfejsu + 1d10</b>
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Nazwa</th>
+										<th class="header-cell">Opis</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Skaner</div>
+										</td>
+										<td class="secondary-cell">Pozwala Netrunnerowi odnaleźć punkty dostępu do każdej sieci w okolicy. Liczba punktów dostępu i promień skanu zależy od rzutu i GM'a.  Zużywa zwykłą Akcję.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Backdoor</div>
+										</td>
+										<td class="secondary-cell">Pozwala Netrunnerowi złamać hasło. Hasło jest automatycznie złamane, jeżeli Netrunner je zna. Zużywa Akcję sieciową.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Cloak</div>
+										</td>
+										<td class="secondary-cell">Pozwala Netrunnerowi na zamazanie śladów swojej działalności i ukrycie wirusów. Wykonany rzut definiuje DV jakie musi pokonać inny Netrunner, by odkryć wykonane Akcje. Jeżeli Cloak nie zostaje użyty, inny Netrunner automatycznie odkrywa te informacje. Zużywa Akcję sieciową.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Control</div>
+										</td>
+										<td class="secondary-cell">Pozwala na objęcie kontroli nad urządzeniami zewnętrznymi podłączonymi do sieci za pomocą Węzła kontroli. Każdy Węzeł wymaga rzutu i Akcji sieciowej do przejęcia. Operowanie każdym urządzeniem podłączonym do węzła wymaga osobnej Akcji sieciowej. Węzeł kontroli można aktywować z każdego miejsca w sieci raz na turę. DV potrzebny do przejęcia Węzła kontroli, który jest aktualnie w rękach innego Netrunnera lub Demona, jest równy rzutowi, który wykonali, aby przejąć nad nim kontrolę.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Eye-Dee</div>
+										</td>
+										<td class="secondary-cell">2</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Pathfinder</div>
+										</td>
+										<td class="secondary-cell">2</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Slide</div>
+										</td>
+										<td class="secondary-cell">2</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Virus</div>
+										</td>
+										<td class="secondary-cell">2</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Zap</div>
+										</td>
+										<td class="secondary-cell">2</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</section>
 				</div>
+
 				<!-- 
 				Koniec podstrony: -->
 				</div>
