--- a/pages/arasaka.html
+++ b/pages/arasaka.html
@@ -441,7 +441,7 @@
 											<div>Młot (AP)</div>
 										</td>
 										<td class="secondary-cell">1 / 0 / 0</td>
-										<td class="secondary-cell">Zadaje 3d6 REZ Programom nie BLACK-ICE, zadaje 2d6 REZ Programom BLACK-ICE.</td>
+										<td class="secondary-cell">Zadaje 3d6 REZ Programom, zadaje 2d6 REZ BLACK-ICE.</td>
 										<td class="secondary-cell">50 €$</td>
 									</tr>
 									<tr>
@@ -449,7 +449,7 @@
 											<div>Sierp (AP)</div>
 										</td>
 										<td class="secondary-cell">1 / 0 / 0</td>
-										<td class="secondary-cell">Zadaje 3d6 REZ Programom BLACK-ICE, zadaje 2d6 REZ Programom nie BLACK-ICE.</td>
+										<td class="secondary-cell">Zadaje 3d6 REZ BLACK-ICE, zadaje 2d6 REZ Programom.</td>
 										<td class="secondary-cell">50 €$</td>
 									</tr>
 									<tr>
@@ -481,7 +481,7 @@
 											<div>Salwa (AR)</div>
 										</td>
 										<td class="secondary-cell">0 / 0 / 0</td>
-										<td class="secondary-cell">Niszczy jeden losowy Program nie BLACK-ICE z Cyberdecka celu.</td>
+										<td class="secondary-cell">Niszczy jeden losowy Program z Cyberdecka celu.</td>
 										<td class="secondary-cell">100 €$</td>
 									</tr>
 									<tr>
@@ -599,7 +599,7 @@
 											<div>Żmija (AR)</div>
 										</td>
 										<td class="secondary-cell">4 / 6<br>2 / 2 / 15</td>
-										<td class="secondary-cell">Niszczy jeden losowy Program nie BLACK-ICE z Cyberdecka celu.</td>
+										<td class="secondary-cell">Niszczy jeden losowy Program z Cyberdecka celu.</td>
 										<td class="secondary-cell">100 €$</td>
 									</tr>
 									<tr>
@@ -699,6 +699,364 @@
 							<span>Ulepszenia</span>
 						</div>
 					</div>
+					<section class="ar-section">
+						<div class="ar-section-header">
+							<h3>Ulepszenia różne</h3>
+							<p>
+								Po ukończeniu kilku kontraktów Netrunner zazwyczaj chce nieco rozszerzyć swoje możliwości. 
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell" width="120px">Nazwa</th>
+										<th class="header-cell">Opis</th>
+										<th class="header-cell" width="100px">Koszt</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Kombinezon Netrunnerski</div>
+										</td>
+										<td class="secondary-cell">SP11 na głowę i ciało. +1 miejsce na osprzęt. Osprzęt zainstalowany w kombinezonie nie może być używany, gdy kombinezon nie jest noszony.</td>
+										<td class="secondary-cell">1000 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Cyberdeck w Cyberramieniu</div>
+										</td>
+										<td class="secondary-cell">Cyberdeck instalowany w Cyberramieniu. +1 miejsce na oprogramowanie/osprzęt. Zajmuje 3 miejsca w Cyberramieniu.</td>
+										<td class="secondary-cell">500 €$</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="ar-section-header">
+							<h3>Ulepszenia osprzętu do Cyberdecka</h3>
+							<p>
+								Do Cyberdecka oprócz Oprogramowania, na które składają się Programy i BLACK-ICE, może być instalowany osprzęt. 
+							</p>
+							<p class="ar-section-subtitle">
+								Instalacja i deinstalacja osprzętu zajmuje godzinę.
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell" width="120px">Nazwa</th>
+										<th class="header-cell">Opis</th>
+										<th class="header-cell" width="100px">Koszt</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Kopia zapasowa</div>
+										</td>
+										<td class="secondary-cell">Dodatkowy dysk, zapisujący Programy, które właśnie mają zostać zniszczone. Netrunner może użyć Akcji, by odzyskać uratowane Programy i zainstalować je w Cyberdecku, jeżeli ma na nie miejsce. Jeżeli dysk jest odinstalowany z Cyberdecku, dane w nim trzymane zostają wyczyszczone. <b>Zajmuje 2 miejsca.</b></td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Blokada biometryczna</div>
+										</td>
+										<td class="secondary-cell">Blokuje dostęp do Cyberdecku osobom nieuprawnionym. Zablokowany Cyberdeck nie może zostać odblookwany bez klucza lub rzutu na Elektronikę/Bezpieczeństwo DV17. <b>Zajmuje 2 miejsca.</b></td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Wzmocnione obwody</div>
+										</td>
+										<td class="secondary-cell">Cyberdeck z wzmocnionymi obwodami nie może zostać tymczasowo wyłączony lub zniszczony przez efekty EMP i efekty Programów. <b>Zajmuje 1 miejsce.</b></td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Izolowane kabelki</div>
+										</td>
+										<td class="secondary-cell">Cyberdeck z izolowanym okablowaniem nie jest w stanie zapalić się ani spowodować zapalenia się ubrań użytkownika w wyniku działania efektu Programu. <b>Zajmuje 1 miejsce.</b></td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Bariera KRASH</div>
+										</td>
+										<td class="secondary-cell">Cyberdeck z barierą KRASH jest odporny na wszelkie efekty programów, które zmuszają Netrunnera do bezpiecznego lub niebezpiecznego odłączenia się od systemu. <b>Zajmuje 2 miejsca.</b></td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Zwiększenie zasięgu</div>
+										</td>
+										<td class="secondary-cell">Netrunner może użyć Punktu dostępu z odległości 8m. <b>Zajmuje 1 miejsce.</b></td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</section>
+					<div class="ar-bookmark">
+						<div class="ar-bookmark-label">
+							<span>Przemierzanie Sieci</span>
+						</div>
+					</div>
+					<section class="ar-section">
+						<div class="ar-section-header">
+							
+						</div>
+					</section>
+					<div class="ar-bookmark">
+						<div class="ar-bookmark-label">
+							<span>Systemy obronne</span>
+						</div>
+					</div>
+					<section class="ar-section">
+						<div class="ar-section-header">
+							<h3>Demony</h3>
+							<p>
+								Demony to Inteligentne Systemy BLACK-ICE. Nie jest to jednak sztuczna inteligencja, która po Czwartej Wojnie Korporacyjnej została zakazana. Demony są zaprojektowane do atakowania ludzi w realnym świecie za pomocą systemów obronnych takich jak drony i wieżyczki.
+							</p>
+							<p>
+								Demony posiadają Interfejs i Numer bojowy. Numer bojowy łączy wartość STAT i Umiejętności. Rzut jest wykonywany Numer bojowy + 1d10. Demony nie są w stanie używać Programów i BLACK-ICE.
+							</p>
+							<p>
+								Interfejs pozwala Demonom na uzywanie dwóch funkcji: Zap i Control. Ich użycie wymaga Akcji sieciowej. Demon może używać wielu Węzłów kontroli na raz.
+							</p>
+							<p>
+								Demon zawsze wie co się dzieje w całej sieci. Nie ograniczają go hasła, zawsze wie, gdzie znajduje się każdy Netrunner i automatycznie wygrywa każdy pojedynek na SPEED przeciwko Programom.
+							</p>
+							<p>
+								Użycie funkcji Slide przeciwko Demonowi kończy się automatyczną porażką. Demony bronią się za pomocą Poziom Interfejsu + 1d10. 
+							</p>
+							<p class="ar-section-subtitle">
+								Demon wchodzi na początek kolejki Inicjatywy kiedy wykryje intruza za pomocą kamery lub kiedy Netrunner wejdzie do sieci. Demony priorytetyzują używanie Węzłów kontroli nad atakowanie Netrunnerów. 
+							</p>
+							<p>
+								Jako, że Demony to nie są prawdziwe AI, muszą w jakiś sposób decydować co robić. Używają do tego automatów skończonych (finite state machines). Są to diagramy zachowań, które determimnują zachowania na podstawie specjalnych wyzwalaczy.
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Nazwa</th>
+										<th class="header-cell">REZ</th>
+										<th class="header-cell">Interfejs</th>
+										<th class="header-cell">Akcje sieciowe</th>
+										<th class="header-cell">Numer bojowy</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Imp</div>
+										</td>
+										<td class="secondary-cell">15</td>
+										<td class="secondary-cell">3</td>
+										<td class="secondary-cell">2</td>
+										<td class="secondary-cell">14</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Efryt</div>
+										</td>
+										<td class="secondary-cell">25</td>
+										<td class="secondary-cell">4</td>
+										<td class="secondary-cell">3</td>
+										<td class="secondary-cell">14</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Balrog</div>
+										</td>
+										<td class="secondary-cell">30</td>
+										<td class="secondary-cell">7</td>
+										<td class="secondary-cell">4</td>
+										<td class="secondary-cell">14</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="ar-section-header">
+							<h3>Obrona aktywna</h3>
+							<p>
+								Do obrony aktywnej zaliczają się samobieżne drony zdolne do niezależnego poruszania się po obszarze. Systemy są w stanie podążać za celem aż do opuszczenia przez niego bronionego obszaru. <b>Systemy Obrony aktywnej muszą być sterowane przez Netrunnera lub Demona.</b>
+							</p>
+							<p>
+								Gdy systemy obrony aktywnej nie są sterowane, są podatne na przejęcie za pomocą umiejętności Elektronika/Bezpieczeństwo. Przejęty system może być sterowany za pomocą Agenta z użyciem Akcji poprzez punkt dostępu, który znajduje się nie dalej niż 6m od sterującego.
+							</p>
+							<p>
+								Kiedy systemy obrony aktywnej są sterowane przez Netrunnera, wszystkie ataki i obrony używają umiejętności Netrunnera.
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Typ</th>
+										<th class="header-cell">Opis</th>
+										<th class="header-cell">Domyślny wyzwalacz</th>
+										<th class="header-cell">Dane</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Rój dronów</div>
+										</td>
+										<td class="secondary-cell"><p>Malutkie latające drony wielkości komarów, z powierzchnią tnącą wykonaną z nanodrutów.</p><p><b>Elektronika/Bezpieczeństwo DV17, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">8 MOVE, 15HP, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Dron naziemny</div>
+										</td>
+										<td class="secondary-cell"><p>xx</p><p><b>Elektronika/Bezpieczeństwo DV21, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">4 MOVE, 30HP, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Duży Dron Powietrzny</div>
+										</td>
+										<td class="secondary-cell"><p>xx</p><p><b>Elektronika/Bezpieczeństwo DV21, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">6 MOVE, 20HP, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Mały Dron Powietrzny</div>
+										</td>
+										<td class="secondary-cell"><p>xx</p><p><b>Elektronika/Bezpieczeństwo DV17, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">6 MOVE, 15HP, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Dron Pająk</div>
+										</td>
+										<td class="secondary-cell"><p>xx</p><p><b>Elektronika/Bezpieczeństwo DV21, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">4 MOVE, 40HP, Obszar obrony</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="ar-section-header">
+							<h3>Obrona statyczna</h3>
+							<p>
+								Do obrony statycznej zaliczają się systemy, których pole działania jest ograniczone do jednego obszaru. <b>Systemy obrony statycznej działają automatycznie i nie muszą być sterowane przez Netrunnera lub Demona.</b>
+							</p>
+							<p>
+								Gdy systemy obrony aktywnej nie są sterowane, są podatne na przejęcie za pomocą umiejętności Elektronika/Bezpieczeństwo. Przejęty system może być sterowany za pomocą Agenta z użyciem Akcji poprzez punkt dostępu, który znajduje się nie dalej niż 6m od sterującego.
+							</p>
+							<p>
+								Kiedy systemy obrony aktywnej są sterowane przez Netrunnera, wszystkie ataki i obrony używają umiejętności Netrunnera.
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Typ</th>
+										<th class="header-cell">Opis</th>
+										<th class="header-cell">Domyślny wyzwalacz</th>
+										<th class="header-cell">Dane</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Automatyczny Krwawy Rój</div>
+										</td>
+										<td class="secondary-cell"><p>Tworzy czerwoną chmurę nanitów, które po wdechy atakują cel od środka wiążąc hemoglobinę we krwi i tworząc skrzepy. Każdy zbudowany z mięsa w zasięgu działania pułapki rzuca na Resist torture/drugs DV15. Każdy, kto przegra otrzymuje 3d6 obrażeń bezpośrednich.</p><p><b>Elektronika/Bezpieczeństwo DV21, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">Pojedynczy atak na wszystkie cele, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Automatyczna broń biała</div>
+										</td>
+										<td class="secondary-cell"><p>TAutomatyczna, bardzo ciężka broń biała, zazwyczaj atakująca z jednego rogu pomieszczenia. Często przybiera formę przemysłowego noża wodnego lub wirującego drutu monofilamentowego.</p><p><b>Elektronika/Bezpieczeństwo DV17, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">Numer bojowy 14, 25HP, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Automatyczna wieżyczka</div>
+										</td>
+										<td class="secondary-cell"><p>Jest to automatyczna broń, zwykle umieszczana w suficie pomieszczenia w celu zapewnienia najlepszego zasięgu.</p><p><b>Elektronika/Bezpieczeństwo DV17, 5 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi na dany obszar nie mając przy sobie odpowiedniej przepustki ani identyfikatora.</td>
+										<td class="secondary-cell">Numer bojowy 14, 25HP, Obszar obrony</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="ar-section-header">
+							<h3>Obrona środowiskowa</h3>
+							<p>
+								
+							</p>
+						</div>
+						<div class="ar-section-table-container">
+							<table>
+								<thead>
+									<tr>
+										<th class="header-cell">Typ</th>
+										<th class="header-cell">Opis</th>
+										<th class="header-cell">Domyślny wyzwalacz</th>
+										<th class="header-cell">Dane</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Kamera</div>
+										</td>
+										<td class="secondary-cell"><p>Kamery rejestrują obraz w słabym oświetleniu, w podczerwieni i ultrafiolecie, a następnie przesyłają go do demona lub personelu ochrony, który może podjąć odpowiednie działania.</p><p><b>Elektronika/Bezpieczeństwo DV9, 1 min</b></p></td>
+										<td class="secondary-cell">Cel wchodzi do pomieszczenia.</td>
+										<td class="secondary-cell">5HP, Per DV17, Widzi całe pomieszczenie</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Podłoga plącząca</div>
+										</td>
+										<td class="secondary-cell"><p>Specjalny dywan, który oplątuje nogi celu i redukuje MOVE o 1d6 do zniszczenia lub zejścia z dywanu.</p><p><b>Elektronika/Bezpieczeństwo DV13, 1 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">20HP, Per DV17, ROF 1, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Podłoga elektryczna</div>
+										</td>
+										<td class="secondary-cell"><p>Zadaje 6d6 obrażeń. Pancerz nie doznaje uszkodzeń.</p><p><b>Elektronika/Bezpieczeństwo DV13, 1 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">20HP, Per DV17, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Lasery</div>
+										</td>
+										<td class="secondary-cell"><p>Po dotknięciu cel czuje się jakby został uderzony bardzo ciężką bronią białą. Jeśli laser zostanie zauważony można przejść przez niego z rzutem Atletyka DV17.</p><p><b>Elektronika/Bezpieczeństwo DV13, 5 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce lub poruszy się o 2m wewnątrz.</td>
+										<td class="secondary-cell">Per DV17, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Zapadnia</div>
+										</td>
+										<td class="secondary-cell"><p>Po osiągnięciu dna cel otrzymuje 6d6 obrażeń. Można uniknąć rzutem na Atletykę DV15. Automatyczny sukces, gdy Grapple Hand lub Grapple Gun jest łatwo dostępny.</p><p><b>Elektronika/Bezpieczeństwo DV17, 1 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">Per DV17, Obszar obrony</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</section>
 				</div>
 
 				<!-- 
