--- a/pages/arasaka.html
+++ b/pages/arasaka.html
@@ -1053,6 +1053,46 @@
 										<td class="secondary-cell">Cel staje na pułapce.</td>
 										<td class="secondary-cell">Per DV17, Obszar obrony</td>
 									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Maź</div>
+										</td>
+										<td class="secondary-cell"><p>Rozpylacze, które rozpylają maź wokół nóg celu zmniejszając jego MOVE celu o 2d6.</p><p><b>Elektronika/Bezpieczeństwo DV13, 1 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">10 HP, Per DV17, 1 ROF, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Zgniatacze</div>
+										</td>
+										<td class="secondary-cell"><p>Z sufitu lub ze ścian wyjeżdżają powierzchmie zgniatające, któe zadają 6d6 obrażeń.</p><p><b>Elektronika/Bezpieczeństwo DV13, 5 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">20 HP, Per DV17, 1 ROF, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Śliska podłoga</div>
+										</td>
+										<td class="secondary-cell"><p>Rozpylacze, które rozpylają superśliską ciecz. Każdy, kto na niej stoi i próbuje wykonać ruch musi wykonać rzut na Atletykę DV15. Przy porażce Postać upada.</p><p><b>Elektronika/Bezpieczeństwo DV13, 1 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">10 HP, Per DV17, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Panele paraliżujące</div>
+										</td>
+										<td class="secondary-cell"><p>Panele przypominające obrazy i tablice wiszą na ścianach. Przy aktywacji emitują oślepiający strumień światła i dźwięku. Każdy, kto znajdzie się w ich obszarze działania, musi wykonać rzut na Resist torture/drugs DV15. Przy porażce przez następną minutę cierpi na efekty urazów krytycznych: Uszkodzenie oka i Uszkodzenie ucha.</p><p><b>Elektronika/Bezpieczeństwo DV13, 1 min</b></p></td>
+										<td class="secondary-cell">Cel staje w odległości 2m od pułapki. Obszar działania 10x10m.</td>
+										<td class="secondary-cell">5 HP, Per DV17, Obszar obrony</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Gaz usypiający</div>
+										</td>
+										<td class="secondary-cell"><p>Po uruchomieniu całe pomieszczenie hermetycznie sie zamyka. Pułapka wchodzi na początek kolejki inicjatywy. Przy każdej turze pułapki każda Postać wykonuje rzut na Resist torture/drugs DV13. Przy porażce Postać traci przytomność.</p><p><b>Elektronika/Bezpieczeństwo DV17, 5 min</b></p></td>
+										<td class="secondary-cell">Cel staje na pułapce.</td>
+										<td class="secondary-cell">60 HP, Per DV17, Obszar obrony</td>
+									</tr>
 								</tbody>
 							</table>
 						</div>
